Cleanup of template, removed useless sections in pelicanconf

--- a/themes/pelican-bootstrap3/templates/includes/taglist.html
+++ b/themes/pelican-bootstrap3/templates/includes/taglist.html
@@ -1,4 +1,5 @@
 {% if article.tags %}
+&nbsp;
 <span class="label label-default">Tags</span>
 {% for tag in article.tags %}
 	<a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>
