--- a/themes/pelican-bootstrap3/templates/index.html
+++ b/themes/pelican-bootstrap3/templates/index.html
@@ -3,11 +3,10 @@
     {% if articles %}
         {% for article in (articles_page.object_list if articles_page else articles) %}
             <article>
-                <h2><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h2>
-                <div class="summary">{{ article.summary }}
+                <h4><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h4>
+                <div class="summary">{{ article.author }}
                     {# Uncomment if you want to show comment counts #}
                     {#{% include 'includes/comment_count.html' %}#}
-                    <a class="btn btn-default btn-xs" href="{{ SITEURL }}/{{ article.url }}">more ...</a>
                 </div>
             </article>
             <hr/>
