--- a/themes/pelican-bootstrap3/templates/includes/article_info.html
+++ b/themes/pelican-bootstrap3/templates/includes/article_info.html
@@ -1,13 +1,13 @@
 <footer class="post-info">
-    <span class="label label-default">Date</span>
-    <span class="published">
-        <i class="icon-calendar"></i>{{ article.locale_date }}
-    </span>
+    {#<span class="label label-default">Date</span>#}
+    {#<span class="published">#}
+    {#    <i class="icon-calendar"></i>{{ article.locale_date }}#}
+    {#</span>#}
     {# Uncomment if you want the author shown #}
-    {#{% if article.author %}#}
-    {#<span class="label">By</span>#}
-    {#<a href="{{ SITEURL }}/{{ article.author.url }}"><i class="icon-user"></i>{{ article.author }}</a>#}
-    {#{% endif %}#}
+    {% if article.author %}
+    <span class="label label-default">By</span>
+    <i class="icon-user"></i>{{ article.author }}
+    {% endif %}
 
     {# Uncomment if you want to show Categories#}
     {#<span class="label label-default">Category</span>#}
