Figshare pdf support for doi attribute and use in template

--- a/themes/pelican-bootstrap3/templates/includes/article_info.html
+++ b/themes/pelican-bootstrap3/templates/includes/article_info.html
@@ -26,6 +26,13 @@
         </span>
     {% endif %}
 
+    {% if article.doi %}
+        &nbsp;
+        <span class="label label-default">
+            <a href="{{ article.doi }}">FigShare</a>
+        </span>
+    {% endif %}
+
     {% include 'includes/taglist.html' %}
     {% include 'includes/translations.html' %}
 </footer><!-- /.post-info -->
